WIP: remove semantic version imports
The implementation is a mess, is not used by any downstream and a new
standard is coming from NETMOD WG. Remove the baggage.

// FIXME: split up deprecated elements removal first
// FIXME: create new deprecations before removals
// FIXME: cleanup test remnants (yang files, etc.)

Change-Id: I144cd2a1040c264b9c6bfafceb95ef5a77e09d90
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>